<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="FizzBuzz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="apf-xK-HHT">
                                <rect key="frame" x="260" y="607" width="99" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="playAgain"/>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                <color key="tintColor" red="0.97254901959999995" green="0.95294117649999999" blue="0.83137254900000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Play Again"/>
                                <connections>
                                    <action selector="reset:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5XC-Gq-FUz"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jEA-9V-kfn" userLabel="Game View">
                                <rect key="frame" x="40" y="196" width="295" height="295"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H6Q-nK-K7o">
                                        <rect key="frame" x="0.0" y="0.0" width="141.5" height="141.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="numberButton"/>
                                        <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="70"/>
                                        <state key="normal" title="0" backgroundImage="button_border">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="sendMove:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VuA-nr-sDg"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u7C-Nv-xpC">
                                        <rect key="frame" x="153.5" y="0.0" width="141.5" height="141.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="fizzButton"/>
                                        <state key="normal" image="champagne" backgroundImage="button_border">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="sendMove:" destination="BYZ-38-t0r" eventType="touchUpInside" id="B61-ye-Ace"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r5V-lB-zBq">
                                        <rect key="frame" x="153.5" y="153.5" width="141.5" height="141.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="fizzBuzzButton"/>
                                        <state key="normal" image="space" backgroundImage="button_border">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="sendMove:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QQV-Rs-TE5"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kF9-RU-Gnd">
                                        <rect key="frame" x="0.0" y="153.5" width="141.5" height="141.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="buzzButton"/>
                                        <state key="normal" image="lightning" backgroundImage="button_border">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="sendMove:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jCT-KI-NpQ"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="jEA-9V-kfn" secondAttribute="height" multiplier="1:1" id="5xb-rJ-XGr"/>
                                    <constraint firstItem="u7C-Nv-xpC" firstAttribute="width" secondItem="jEA-9V-kfn" secondAttribute="width" multiplier="0.48" id="6Pg-50-Z9C"/>
                                    <constraint firstAttribute="trailing" secondItem="u7C-Nv-xpC" secondAttribute="trailing" id="9qw-Hn-Ck2"/>
                                    <constraint firstAttribute="trailing" secondItem="r5V-lB-zBq" secondAttribute="trailing" id="DiI-RI-gNI"/>
                                    <constraint firstItem="H6Q-nK-K7o" firstAttribute="width" secondItem="jEA-9V-kfn" secondAttribute="width" multiplier="0.48" id="JN4-Of-gk9"/>
                                    <constraint firstItem="H6Q-nK-K7o" firstAttribute="height" secondItem="jEA-9V-kfn" secondAttribute="height" multiplier="0.48" id="LQ6-BN-MDM"/>
                                    <constraint firstItem="u7C-Nv-xpC" firstAttribute="height" secondItem="jEA-9V-kfn" secondAttribute="height" multiplier="0.48" id="Md9-TT-LxS"/>
                                    <constraint firstItem="kF9-RU-Gnd" firstAttribute="height" secondItem="jEA-9V-kfn" secondAttribute="height" multiplier="0.48" id="X7g-rG-vDn"/>
                                    <constraint firstAttribute="bottom" secondItem="r5V-lB-zBq" secondAttribute="bottom" id="fR3-KI-QZ1"/>
                                    <constraint firstItem="H6Q-nK-K7o" firstAttribute="leading" secondItem="jEA-9V-kfn" secondAttribute="leading" id="i6o-Su-df6"/>
                                    <constraint firstItem="r5V-lB-zBq" firstAttribute="height" secondItem="jEA-9V-kfn" secondAttribute="height" multiplier="0.48" id="mrU-da-FJ2"/>
                                    <constraint firstItem="kF9-RU-Gnd" firstAttribute="width" secondItem="jEA-9V-kfn" secondAttribute="width" multiplier="0.48" id="n5S-0E-YDG"/>
                                    <constraint firstItem="r5V-lB-zBq" firstAttribute="width" secondItem="jEA-9V-kfn" secondAttribute="width" multiplier="0.48" id="nw6-Sj-QLo"/>
                                    <constraint firstItem="u7C-Nv-xpC" firstAttribute="top" secondItem="jEA-9V-kfn" secondAttribute="top" id="ql4-y5-E5O"/>
                                    <constraint firstAttribute="bottom" secondItem="kF9-RU-Gnd" secondAttribute="bottom" id="rBt-lA-hVd"/>
                                    <constraint firstItem="H6Q-nK-K7o" firstAttribute="top" secondItem="jEA-9V-kfn" secondAttribute="top" id="s8m-By-Pwf"/>
                                    <constraint firstItem="kF9-RU-Gnd" firstAttribute="leading" secondItem="jEA-9V-kfn" secondAttribute="leading" id="veb-rg-ASr"/>
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3/5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAz-XY-3cH">
                                <rect key="frame" x="327" y="20" width="32" height="28"/>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                <color key="textColor" red="0.97254901959999995" green="0.95294117649999999" blue="0.83137254900000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="0.0" green="0.72156862745098038" blue="0.66274509803921566" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="jEA-9V-kfn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="DyM-dy-25n"/>
                            <constraint firstItem="jEA-9V-kfn" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Hda-Wx-X1q"/>
                            <constraint firstItem="ZAz-XY-3cH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WW8-RE-e7F"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZAz-XY-3cH" secondAttribute="trailing" constant="16" id="crh-RC-onQ"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="apf-xK-HHT" secondAttribute="bottom" constant="20" id="o3U-GP-yDO"/>
                            <constraint firstItem="jEA-9V-kfn" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="qwP-zv-U0E"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="apf-xK-HHT" secondAttribute="trailing" constant="16" id="xFo-A7-c9c"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="buzzButton" destination="kF9-RU-Gnd" id="aXT-7u-aTJ"/>
                        <outlet property="fizzButton" destination="u7C-Nv-xpC" id="GJE-9T-vDE"/>
                        <outlet property="fizzBuzzButton" destination="r5V-lB-zBq" id="vrb-nZ-Viz"/>
                        <outlet property="numberButton" destination="H6Q-nK-K7o" id="QaW-fd-LHl"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="53.623188405797109" y="27.455357142857142"/>
        </scene>
    </scenes>
    <resources>
        <image name="button_border" width="400" height="400"/>
        <image name="champagne" width="49" height="50"/>
        <image name="lightning" width="29" height="50"/>
        <image name="space" width="47" height="50"/>
    </resources>
</document>
